# join4together

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md
.cargo/: config.toml
assets/: bgm.raw
assets/backgrounds/: board.aseprite  clouds_close.aseprite  clouds_far.aseprite  scroller.aseprite  spinner.aseprite  title_screen.aseprite
assets/sprites/: cpu_face_neutral.aseprite  cpu_face_surprised.aseprite  cpu_text.aseprite  draw_text.aseprite  menu_cursor.aseprite  p1_text.aseprite  p2_text.aseprite  press_a.aseprite  press_text.aseprite  quit_text.aseprite  rematch_text.aseprite  spinner_arrow.aseprite  start_text.aseprite  vs_cpu_text.aseprite  vs_player_text.aseprite  wins_text_red.aseprite  wins_text_yellow.aseprite  yellow_token.aseprite
backgrounds/: board.aseprite  title_screen.aseprite
sprites/: board_slot.aseprite  cpu_face_happy.aseprite  cpu_face_mad.aseprite  cpu_face_sad.aseprite  cpu_head.aseprite  red_token.aseprite
src/: audio.rs  graphics.rs  main.rs  math.rs  screens.rs  system.rs
src/audio/: assets.rs  bgm.raw  bounce.raw  drum_roll.rs  mixer.rs  music.rs  noise.rs
src/graphics/: affine.rs  background.rs  effects.rs  sprite.rs
src/graphics/effects/: background_scroller.rs  blending.rs  blinker.rs  spinner.rs
src/resources/: memory.rs
src/screens/: game_screen.rs  spinner_screen.rs  title_screen.rs
src/screens/game_screen/: cpu_face.rs  cpu_turn.rs  cursor.rs  game_board.rs  player_turn.rs  turn.rs
src/system/: constants.rs  gba.rs  irq.rs  memory.rs
src/system/memory/: block.rs  contiguous.rs  error.rs  (+5 more)
