[package]
name = "join4together"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba = "0.11.2"
voladdress = "1.3.0"

[build-dependencies]
asefile = { version = "0.3.6", features = ["utils"] }
id_tree = "1.8.0"
prettyplease = "0.2.12"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }

